# ascend

./: .gitignore  CMakeList.txt  CMakeLists.txt  build_and_run_tests.bat  execute_build.bat
.github/workflows/: cmake-single-platform.yml
cmake/: AssetDependencyManagement.cmake  Nuget.cmake  NugetPackages.cmake
doc/: Documentation Guide.md
src/: CMakeLists.txt
src/ascend/: Renderer.cpp  Renderer.h  WindowsApplication.cpp  WindowsApplication.h  ascend.h  ascendCore.cpp  ascendHelpers.h  main.cpp
src/ascend/Windows/: Application.cpp  EntryPoint.cpp
src/ascend/Windows/RHI/: D3D12Core.cpp  D3D12Core.h  ascendHelpers.h
test/: CMakeLists.txt  TestRenderer.h  run_test.cpp
